--- a/src/app/Components/gallery/gallery.component.html
+++ b/src/app/Components/gallery/gallery.component.html
@@ -1,26 +1,59 @@
+<h1 class="display-4 text-center text-info">Nuestros Mejores Momentos</h1>
 <div class="row py-5">
-    <div class="col-md-4 col-12 col-sm-6">
+    <div class="col-md-4 col-12 col-sm-6 border ">
         <h3>Imagen</h3>
         <hr>
-        <img class="img-fluid rounded" src="https://images.pexels.com/photos/112460/pexels-photo-112460.jpeg?cs=srgb&dl=automobile-automotive-car-112460.jpg&fm=jpg" alt="img">
+        <img class="img-fluid rounded" src="assets/Baile1.jpeg" alt="img">
         <p>
             orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
         </p>
       </div>
-      <div class="col-md-4 col-12 col-sm-6">
+      <div class="col-md-4 col-12 col-sm-6  border">
           <h3>Imagen</h3>
           <hr>
-          <img class="img-fluid rounded" src="https://images.pexels.com/photos/112460/pexels-photo-112460.jpeg?cs=srgb&dl=automobile-automotive-car-112460.jpg&fm=jpg" alt="img">
+          <img class="img-fluid rounded" src="assets/Foto1.jpeg" alt="img">
           <p>
               orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
           </p>
         </div>
-        <div class="col-md-4 col-12 col-sm-6">
+        <div class="col-md-4 col-12 col-sm-6  border">
             <h3>Imagen</h3>
             <hr>
-            <img class="img-fluid rounded" src="https://images.pexels.com/photos/112460/pexels-photo-112460.jpeg?cs=srgb&dl=automobile-automotive-car-112460.jpg&fm=jpg" alt="img">
+            <img class="img-fluid rounded" src="assets/Foto2.jpeg" alt="img">
             <p>
                 orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
             </p>
           </div>
+          <div class="col-md-4 col-12 col-sm-6  border mt-3">
+              <h3>Imagen</h3>
+              <hr>
+              <img class="img-fluid rounded" src="assets/Foto3.jpeg" alt="img">
+              <p>
+                  orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
+              </p>
+            </div>
+            <div class="col-md-4 col-12 col-sm-6  border mt-3">
+                <h3>Imagen</h3>
+                <hr>
+                <img class="img-fluid rounded" src="assets/Halloween.jpeg" alt="img">
+                <p>
+                    orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
+                </p>
+              </div>
+              <div class="col-md-4 col-12 col-sm-6 mt-3 border">
+                  <h3>Imagen</h3>
+                  <hr>
+                  <img class="img-fluid rounded" src="assets/Halloween2.jpeg" alt="img">
+                  <p>
+                      orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
+                  </p>
+                </div>
+                <div class="col-md-4 col-12 col-sm-6 mt-3 border" >
+                    <h3>Imagen</h3>
+                    <hr>
+                    <img class="img-fluid rounded" src="assets/Portada.jpeg" alt="img">
+                    <p>
+                        orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
+                    </p>
+                  </div>
 </div>
