--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/Inscription">Inscripciones</a>
+                <a class="nav-link" href="https://goo.gl/forms/u3gIc79cB3fbJRSI3">Inscripciones</a>
             </li>
 
         </ul>
