--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,40 +1,48 @@
 <app-slider></app-slider>
-<div class="container">
+<section>
 
-<div class="row mt-5 mx-2">
-    <div class="col-md-4 col-12 col-sm-6">
-        <h3>Halloween</h3>
-        <hr>
-        <img class="img-fluid rounded" src="assets/Portada.jpeg" alt="img">
-        <p>
-            orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
-        </p>
-      </div>
-      <div class="col-md-4 col-12 col-sm-6">
-          <h3>Imagen</h3>
-          <hr>
-          <img class="img-fluid rounded" src="assets/Halloween2.jpeg" alt="img">
-          <p>
-              orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
-          </p>
-        </div>
-        <div class="col-md-4 col-12 col-sm-6">
-            <h3>Imagen</h3>
-            <hr>
-            <img class="img-fluid rounded" src="assets/Halloween.jpeg" alt="img">
-            <p>
-                orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
-            </p>
+  <div class="container my-5">
+    <div class="card-deck">
+      <div class="row">
+        <div class="card">
+          <img class="card-img-top" src="assets/Portada.jpeg">
+          <div class="card-body">
+            <h5 class="card-title">Hallowen</h5>
+            <p class="text-dark">orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la</p>
+            <a href="#" class="btn btn-primary">Ver Mas...</a>
           </div>
-          <div class="col-md-4 col-12 col-sm-6">
-              <h3>Imagen</h3>
-              <hr>
-              <img class="img-fluid rounded" src="assets/Baile1.jpeg" alt="img">
-              <p>
-                  orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto d
-              </p>
-            </div>
-  </div>
-
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="assets/Portada.jpeg">
+          <div class="card-body">
+            <h5 class="card-title">Hallowen</h5>
+            <p class="text-dark">orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la</p>
+            <a href="#" class="btn btn-primary">Ver Mas...</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="assets/Portada.jpeg">
+          <div class="card-body">
+            <h5 class="card-title">Hallowen</h5>
+            <p class="text-dark">orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la</p>
+            <a href="#" class="btn btn-primary">Ver Mas...</a>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
+  </section>
+<div class="container">
+  <div class="row">
+
+    <app-second-section class="col-md-8 col-12 col-sm-12">  </app-second-section>
+    <app-contacts-us class="col-md-4 col-12 col-sm-12"></app-contacts-us>
+  </div>
+</div>
+
+
+
+
+
+
 
