--- a/src/app/Components/slider/slider.component.html
+++ b/src/app/Components/slider/slider.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  >
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -7,21 +7,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="assets/Portada.jpeg" alt="First slide">
+            <img class="d-block w-100" src="assets/slider1.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Comentario</h5>
                 <span class="text-info">Texto</span>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="assets/Halloween.jpeg" alt="Second slide">
+            <img class="d-block w-100" src="assets/slider2.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Comentario</h5>
                 <span class="text-info">Texto</span>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="assets/Halloween2.jpeg" alt="Third slide">
+            <img class="d-block w-100" src="assets/slider1.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Comentario</h5>
                 <span class="text-info">Texto</span>
@@ -38,4 +38,3 @@
         </a>
       </div>
 
-</div>
